/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "TouchLocationData.proto";
import "TouchActionEnum.proto";

message TouchEvent {
  repeated TouchLocation touch_location = 1;
  optional uint32 action_index = 2;
  required TouchAction.Enum touch_action = 3;
}
